--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Prata", serif;
 
 }
 
@@ -27,7 +27,7 @@
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(assets/logoAvatar.png);
+    background-image: url(/public/assets/logoAvatar.png);
     background-position: center;
     background-size: cover;
 
@@ -107,7 +107,7 @@ nav a:hover {
 .home-button {
     height: 10vh;
     width: 4vw;
-    background-image: url(assets/lemo.png);
+    background-image: url(/public/assets/lemo.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -127,7 +127,7 @@ nav a:hover {
 }
 
 .fire-button {
-    background-image: url(assets/EmblemaFireNation.webp);
+    background-image: url(/public/assets/EmblemaFireNation.webp);
     border-color: rgb(137, 135, 135);
 }
 
@@ -136,7 +136,7 @@ nav a:hover {
 }
 
 .water-button {
-    background-image: url(assets/emblemaWaterNation.png);
+    background-image: url(/public/assets/emblemaWaterNation.png);
     border-color: rgb(137, 135, 135);
 }
 
@@ -145,7 +145,7 @@ nav a:hover {
 }
 
 .air-button {
-    background-image: url(assets/emblemaAr.jpg);
+    background-image: url(/public/assets/emblemaAr.jpg);
     border-color: rgb(137, 135, 135);
 }
 
@@ -154,7 +154,7 @@ nav a:hover {
 }
 
 .earth-button {
-    background-image: url(assets/emblemaEarthNation.jpg);
+    background-image: url(/public/assets/emblemaEarthNation.jpg);
     border-color: rgb(137, 135, 135);
 }
 
@@ -219,7 +219,7 @@ nav a:hover {
 
 
 .background-home {
-    background-image: url(assets/dropAir.jpg);
+    background-image: url(/public/assets/dropAir.jpg);
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -246,7 +246,7 @@ nav a:hover {
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-image: url(assets/avatarWallpaper.jpg);
+    background-image: url(/public/assets/avatarWallpaper.jpg);
     background-position: center;
     background-size: cover;
     color: rgb(255, 255, 255);
@@ -308,7 +308,7 @@ nav a:hover {
 .lax {
     height: 45vh;
     width: 100vw;
-    background-image: url(assets/fireLax.jpeg);
+    background-image: url(/public/assets/fireLax.jpeg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -317,15 +317,15 @@ nav a:hover {
 }
 
 .um {
-    background-image: url(assets/avataresWallpaper.jpg);
+    background-image: url(/public/assets/avataresWallpaper.jpg);
 }
 
 .dois {
-    background-image: url(assets/sunGrupoAvatar.jpeg);
+    background-image: url(/public/assets/sunGrupoAvatar.jpeg);
 }
 
 .quatro {
-    background-image: url(assets/download\ \(3\).jpg);
+    background-image: url(/public/assets/download\ \(3\).jpg);
 }
 
 
@@ -336,7 +336,7 @@ nav a:hover {
 
 
 .fire {
-    background-image: url(assets/zuko.jpg);
+    background-image: url(/public/assets/zuko.jpg);
     background-position: left;
     background-repeat: no-repeat;
 
@@ -364,21 +364,22 @@ nav a:hover {
 
 
 
+
 .zuko-fire {
     height: 100vh;
     width: 50vw;
-    background-image: url(assets/zukoSolo.jpg);
+    background-image: url(/public/assets/zukoSolo.jpg);
     background-size: cover;
     background-position: bottom;
 }
 
-.txt-fire h1 {
+.txt h1 {
     font-size: 3rem;
     text-align: center;
     color: aliceblue;
 }
 
-.txt-fire p {
+.txt p {
     font-size: 1.7rem;
     color: #fff;
 }
@@ -392,7 +393,7 @@ nav a:hover {
     color: #fff;
     background-image: linear-gradient(rgb(215, 0, 0), rgb(80, 0, 0));
     border: 2px solid rgb(0, 0, 0);
-    border-bottom: 0.3rem solid rgb(255, 255, 255);
+    border-bottom: 0.3rem solid rgb(212, 0, 0);
     box-shadow: 0 0.7rem 1rem 0.2rem var(--red);
     text-decoration: none;
 }
@@ -414,7 +415,7 @@ nav a:hover {
 
 
 .air {
-    background-image: url(assets/aangBackground.jpg);
+    background-image: url(/public/assets/aangBackground.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -427,7 +428,7 @@ nav a:hover {
 .aang-air {
     height: 100vh;
     width: 50vw;
-    background-image: url(assets/aangSolo.jpg);
+    background-image: url(/public/assets/aangSolo.jpg);
     background-size: cover;
     background-position: bottom;
 }
@@ -468,7 +469,7 @@ nav a:hover {
 
 
 .water {
-    background-image: url(assets/kataraBackground.png);
+    background-image: url(/public/assets/kataraBackground.png);
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
@@ -509,7 +510,7 @@ nav a:hover {
 .katara-water {
     height: 100vh;
     width: 50vw;
-    background-image: url(assets/kataraSolo.png);
+    background-image: url(/public/assets/kataraSolo.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -521,63 +522,7 @@ nav a:hover {
 
 
 
-.button {
-    background-color: #000;
-    border: 0px;
-    outline: 0px;
-    color: #fff;
-    width: 200px;
-    padding: 20px;
-    border-radius: 50px;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
 
-.liquid {
-    background-color: #2893eb;
-    width: 14rem;
-    height: 5rem;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    box-shadow: inset 5px -5px 25px #104e81,
-        inset -5px 0px 25px #104e81;
-}
-
-.liquid::after {
-    content: '';
-    width: 450px;
-    height: 400px;
-    background: #000;
-    z-index: 1;
-    position: absolute;
-    left: -110px;
-    top: -380px;
-    border-radius: 45%;
-    animation: animate 5s linear 2s infinite;
-}
-
-.liquid::before {
-    content: '';
-    width: 450px;
-    height: 400px;
-    background-color: rgb(68, 160, 235);
-    z-index: 1;
-    position: absolute;
-    left: -110px;
-    top: -380px;
-    border-radius: 40%;
-    animation: animate 5s linear 1.8s infinite;
-}
-
-.btn-txt {
-    position: relative;
-    z-index: 1;
-    font-size: 22px;
-    font-family: sans-serif;
-    letter-spacing: 2px;
-}
 
 @keyframes animate {
     from {
@@ -596,7 +541,7 @@ nav a:hover {
 .earth {
     height: 100vh;
     width: 100vw;
-    background-image: url(assets/tophBackground.png);
+    background-image: url(/public/assets/tophBackground.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -608,7 +553,7 @@ nav a:hover {
 .toph-earth {
     height: 100vh;
     width: 50vw;
-    background-image: url(assets/tophSolo.png);
+    background-image: url(/public/assets/tophSolo.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
