--- a/public/css/AgniKai.css
+++ b/public/css/AgniKai.css
@@ -118,25 +118,25 @@ h1 {
 }
 
 .zuko {
-    background-image: url(assets/zukoFire.jpg);
+    background-image: url(/public/assets/zukoFire.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .ozai {
-    background-image: url(assets/Ozai.jpg);
+    background-image: url(/public/assets/Ozai.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .azula {
-    background-image: url(assets/azulaFire.jpeg);
+    background-image: url(/public/assets/azulaFire.jpeg);
     background-position: center;
     background-size: cover;
 }
 
 .iroh {
-    background-image: url(assets/Iroh.jpg);
+    background-image: url(/public/assets/Iroh.jpg);
 }
 
 
@@ -171,7 +171,7 @@ h1 {
 
 .character01 {
     position: absolute;
-    background-image: url(assets/zukoFire.jpg);
+    background-image: url(/public/assets/zukoFire.jpg);
     width: 50vw;
     height: 100vh;
     background-size: cover;
@@ -184,7 +184,7 @@ h1 {
 
 .character02 {
     position: absolute;
-    background-image: url(assets/zukoFire.jpg);
+    background-image: url(/public/assets/zukoFire.jpg);
     width: 50vw;
     height: 100vh;
     background-size: cover;
@@ -202,7 +202,7 @@ h1 {
     width: 15vh;
     line-height: 15vh;
     text-align: center;
-    background-image: url(assets/fireBall.jpeg);
+    background-image: url(/public/assets/fireBall.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 180px;
@@ -218,7 +218,7 @@ h1 {
     width: 15vh;
     line-height: 15vh;
     text-align: center;
-    background-image: url(assets/fireBall.jpeg);
+    background-image: url(/public/assets/fireBall.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 180px;
