--- a/public/css/cadastrologin.css
+++ b/public/css/cadastrologin.css
@@ -122,7 +122,7 @@
     height: 100%;
     background-color: blue;
     transition: 1s ease-in-out;
-    background-image: url(assets/kataraArt.jpg);
+    background-image: url(/public/assets/kataraArt.jpg);
 }
 
 input[type="radio"] {
