dashboard atualizada + water quiz atualizado + botão saida + visualização de textos + atualização css toph game + outros

--- a/public/css/AgniKai.css
+++ b/public/css/AgniKai.css
@@ -32,7 +32,12 @@ h1 {
     font-family: "Lobster", sans-serif;
     font-size: 3.5rem;
     color: white;
-    text-shadow: 6px 6px 10px #000000;
+
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
 
 .exit {
@@ -61,6 +66,11 @@ h1 {
     text-align: center;
     transition: 3s ease;
     color: white;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
 
 #fighterone {
@@ -99,14 +109,10 @@ h1 {
     margin-top: 9rem;
     background-position: center;
     background-size: cover;
-    color: #000;
+
 }
 
-.character:hover {
-    border: 1px solid black;
-    transform: scale(1.15);
-    color: #fff;
-}
+
 
 .character:active {
     transform: scale(0.7) rotateZ(1.9deg);
@@ -115,6 +121,35 @@ h1 {
 .character-txt {
     display: flex;
     justify-content: flex-end;
+    color: #fff;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
+    transition: 0.6s ease;
+}
+
+.character:hover .character-txt {
+    color: #000;
+    text-shadow:
+        -2px -2px 0 #fff,
+        2px -2px 0 #fff,
+        -2px 2px 0 #fff,
+        2px 2px 0 #fff;
+}
+
+
+
+.character:hover {
+    border: 1px solid black;
+    transform: scale(1.15);
+    color: #000;
+    text-shadow:
+        -2px -2px 0 #fff,
+        2px -2px 0 #fff,
+        -2px 2px 0 #fff,
+        2px 2px 0 #fff;
 }
 
 .zuko {
@@ -261,7 +296,7 @@ h1 {
     z-index: 1
 }
 
-.start-game:hover{
+.start-game:hover {
     background-color: rgb(110, 0, 0);
     color: #fff;
 }
@@ -284,4 +319,9 @@ h1 {
 .result {
     font-size: 5rem;
     color: #fff;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
