--- a/public/css/air-aang.css
+++ b/public/css/air-aang.css
@@ -5,10 +5,22 @@
     overflow-x: hidden;
 }
 
-body {
-    background-color: rgb(251, 254, 205);
+::-webkit-scrollbar {
+    width: 12px;
 }
 
+::-webkit-scrollbar-track {
+    background: #060000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #760000;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #ff0000;
+}
 
 
 .High {
@@ -17,11 +29,39 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(/public/assets/avataresUnidos.jpg);
+    flex-direction: column;
+    background-image: url(/public/assets/dropAir.jpg);
     background-size: cover;
+    color: #fff;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 
 }
 
+.overlay {
+    position: absolute;
+    width: 110%;
+    height: 100%;
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.99));
+}
+
+.overlay2 {
+    position: absolute;
+    width: 110%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0), transparent, transparent, transparent, transparent, transparent, transparent, rgba(0, 0, 0));
+}
+
+.High h1 {
+    font-size: 5rem;
+}
+
+.High p {
+    font-size: 3rem;
+}
 
 
 .cycle-avatar {
@@ -39,7 +79,7 @@ body {
     width: 50vw;
 }
 
-.txt-cycle{
+.txt-cycle {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +92,7 @@ body {
 
 .cycle-img {
     background-image: url(/public/assets/cicloBlack.jpg);
-   
+
     background-position: center;
     background-size: contain;
 
@@ -120,7 +160,7 @@ body {
 
 }
 
-.element{
+.element {
     background-color: antiquewhite;
     width: 20vw;
     height: 65vh;
@@ -130,28 +170,30 @@ body {
     border-top-right-radius: 3rem;
 }
 
-.earth-card{
+.earth-card {
     background-color: rgb(0, 100, 0);
     border: 5px solid rgb(0, 100, 0);
 }
-.fire-card{
+
+.fire-card {
     background-color: rgb(100, 0, 0);
     border: 5px solid rgb(100, 0, 0);
 }
 
-.air-card{
+.air-card {
     background-color: rgb(150, 150, 150);
     border: 5px solid rgb(150, 150, 150);
 
 }
-.water-card{
+
+.water-card {
     background-color: rgb(0, 0, 100);
-    border: 5px solid  rgb(0, 0, 100);
+    border: 5px solid rgb(0, 0, 100);
 
 }
 
-.container-img{
-    height:  30vh;
+.container-img {
+    height: 30vh;
     width: 20vw;
     display: flex;
     justify-content: center;
@@ -159,19 +201,20 @@ body {
     background-color: #fff;
 }
 
-.container-txt{
+.container-txt {
     height: 35vh;
     width: 20vw;
     display: flex;
-   flex-direction: column;
-   margin-top: 2.5rem;
-   justify-content: top;
-   align-items: center;
+    flex-direction: column;
+    margin-top: 2.5rem;
+    justify-content: top;
+    align-items: center;
     text-align: center;
     color: #fff;
+
 }
 
-.img-card{
+.img-card {
     height: 20vh;
     width: 20vh;
     border-radius: 90px;
@@ -181,30 +224,28 @@ body {
     border: 2px solid black;
 }
 
-.toupeira-img{
+.toupeira-img {
     background-image: url(/public/assets/cardToupeira.jpg);
-    
+
 }
 
-.bisao-img{
+.bisao-img {
     background-image: url(/public/assets/AppaGiant.png);
 }
 
-.moon{
+.moon {
     background-image: url(/public/assets/MoonSea.jpg);
 }
 
-.dragon{
+.dragon {
     background-image: url(/public/assets/DragonFire.webp);
 }
 
-.title-txt{
+.title-txt {
     font-size: 2rem;
     margin-bottom: 20px;
 }
 
-.txt-card{
+.txt-card {
     font-size: 1.5rem;
 }
-
-
