--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,24 @@
 
 }
 
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #060000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #760000;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #ff0000;
+}
+
 :root {
     --red: rgb(190, 0, 0);
 }
@@ -16,11 +34,19 @@
 .home {
     height: 100vh;
     width: 100vw;
-   
+}
+
+.background-home {
+    position: absolute;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+
 }
 
 .info-home {
-   
+
     position: absolute;
     height: 20vh;
     width: 25vw;
@@ -218,16 +244,7 @@ nav a:hover {
 
 
 
-.background-home {
-    background-image: url(/public/assets/dropAir.jpg);
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    z-index: -1;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 
 
 
@@ -342,7 +359,7 @@ nav a:hover {
 
     height: 100vh;
     width: 100vw;
-   
+
     display: flex;
 }
 
@@ -371,17 +388,30 @@ nav a:hover {
     background-image: url(/public/assets/zukoSolo.jpg);
     background-size: cover;
     background-position: bottom;
+    border: 0.3rem solid rgb(194, 3, 3);
+    border-bottom: 0;
+    border-top: 0;
 }
 
 .txt h1 {
     font-size: 3rem;
     text-align: center;
     color: aliceblue;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
 
 .txt p {
     font-size: 1.7rem;
     color: #fff;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
 
 
@@ -421,7 +451,7 @@ nav a:hover {
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    
+
     display: flex;
 }
 
@@ -431,6 +461,9 @@ nav a:hover {
     background-image: url(/public/assets/aangSolo.jpg);
     background-size: cover;
     background-position: bottom;
+    border: 0.3rem solid rgb(255, 255, 255);
+    border-bottom: 0;
+    border-top: 0;
 }
 
 
@@ -514,6 +547,10 @@ nav a:hover {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    border: 0.3rem solid rgb(40, 147, 235);
+
+    border-bottom: 0;
+    border-top: 0;
 }
 
 
@@ -557,6 +594,11 @@ nav a:hover {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    border: 0.3rem solid rgb(8, 155, 0);
+
+    border-bottom: 0;
+    border-top: 0;
+    color: #fff;
 
 }
 
@@ -595,14 +637,6 @@ nav a:hover {
 }
 
 
-.aboutMe {
-    height: 100vh;
-    width: 100vw;
-    padding-left: 1rem;
-    display: flex;
-    background-color: #fff;
-}
-
 
 
 .white {
@@ -613,7 +647,7 @@ nav a:hover {
     color: var(--red);
 }
 
-.login-card{
+.login-card {
     height: 30vh;
     width: 25vw;
     background-color: #000;
@@ -626,7 +660,7 @@ nav a:hover {
     color: #fff;
 }
 
-.txt-card-login{
+.txt-card-login {
     height: 20vh;
     width: 100%;
     color: #fff;
@@ -637,19 +671,19 @@ nav a:hover {
     align-items: center;
 }
 
-.txt-card-login p{
+.txt-card-login p {
     font-size: 1.5rem;
 
 }
 
 
-.txt-card-login span{
+.txt-card-login span {
     width: 20vw;
     font-size: 1.3rem;
-    
+
 }
 
-.button-card-login{
+.button-card-login {
     height: 5vh;
     width: 100%;
     display: flex;
@@ -658,11 +692,11 @@ nav a:hover {
     gap: 3rem;
 }
 
-.alert:hover{
+.alert:hover {
     color: #d10101;
 }
 
-.button-water{
+.button-water {
     font-size: 1rem;
     padding: 0.6rem 1.8rem;
     border-radius: 0.7rem;
@@ -674,3 +708,18 @@ nav a:hover {
     text-decoration: none;
 }
 
+/* Sobre Mim*/
+
+.aboutMe {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    background-color: #fff;
+    justify-content: center;
+    align-items: center;
+}
+
+.carrosel {
+    filter: drop-shadow(0px 0px 10px #000);
+    overflow: hidden;
+}
