cadastro linkado com banco

--- a/public/css/AgniKai.css
+++ b/public/css/AgniKai.css
@@ -153,25 +153,25 @@ h1 {
 }
 
 .zuko {
-    background-image: url(/public/assets/zukoFire.jpg);
+    background-image: url(../assets/zukoFire.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .ozai {
-    background-image: url(/public/assets/Ozai.jpg);
+    background-image: url(../assets/Ozai.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .azula {
-    background-image: url(/public/assets/azulaFire.jpeg);
+    background-image: url(../assets/azulaFire.jpeg);
     background-position: center;
     background-size: cover;
 }
 
 .iroh {
-    background-image: url(/public/assets/Iroh.jpg);
+    background-image: url(../assets/Iroh.jpg);
 }
 
 
@@ -206,7 +206,7 @@ h1 {
 
 .character01 {
     position: absolute;
-    background-image: url(/public/assets/zukoFire.jpg);
+    background-image: url(../assets/zukoFire.jpg);
     width: 50vw;
     height: 100vh;
     background-size: cover;
@@ -219,7 +219,7 @@ h1 {
 
 .character02 {
     position: absolute;
-    background-image: url(/public/assets/zukoFire.jpg);
+    background-image: url(../assets/zukoFire.jpg);
     width: 50vw;
     height: 100vh;
     background-size: cover;
@@ -237,7 +237,7 @@ h1 {
     width: 15vh;
     line-height: 15vh;
     text-align: center;
-    background-image: url(/public/assets/fireBall.jpeg);
+    background-image: url(../assets/fireBall.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 180px;
@@ -253,7 +253,7 @@ h1 {
     width: 15vh;
     line-height: 15vh;
     text-align: center;
-    background-image: url(/public/assets/fireBall.jpeg);
+    background-image: url(../assets/fireBall.jpeg);
     background-position: center;
     background-size: cover;
     border-radius: 180px;
