--- a/public/css/cadastrologin.css
+++ b/public/css/cadastrologin.css
@@ -123,7 +123,64 @@
     background-color: blue;
     transition: 1s ease-in-out;
     background-image: url(../assets/kataraArt.jpg);
+ 
 }
+
+.msg-erro{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: fit-content;
+    width: 20vw;
+    z-index: 2;
+    background-color: #fff;
+    animation: borderColor 0.5s infinite;
+    color: #0e0d0d;
+    display: none;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    border: 5px rgb(255, 255, 255) solid;
+    
+}
+
+.error{
+    font-family: sans-serif;
+    font-size: 3rem;
+    color: #ffffff;
+    text-shadow:
+    -2px -2px 0 rgb(150, 0, 0),
+    2px -2px 0 rgb(150, 0, 0),
+    -2px 2px 0 rgb(150, 0, 0),
+    2px 2px 0 rgb(150, 0, 0);
+}
+
+#msgErro{
+    font-family: sans-serif;
+    font-size: 2rem;
+    color: #fff;
+    text-shadow:
+    -2px -2px 0 #000000,
+    2px -2px 0 #000000,
+    -2px 2px 0 #000000,
+    2px 2px 0 #000000;
+    
+}
+
+
+@keyframes borderColor {
+    0% {
+        border: 5px rgb(255, 255, 255) solid;
+    }
+
+    50% {
+        border: 5px rgb(185, 0, 0) ridge;
+    }
+
+}
+
 
 input[type="radio"] {
     appearance: none;
