--- a/public/css/water-quiz.css
+++ b/public/css/water-quiz.css
@@ -37,7 +37,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    background-color: black;
+    background-color: rgb(45, 0, 255);
     width: 90%;
     max-width: 800px;
 
@@ -52,22 +52,6 @@ h1 {
     align-items: center;
 }
 
-.exit-button {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #000;
-    color: #fff;
-    padding: 0 2rem;
-    border-radius: 1rem;
-    text-decoration: none;
-}
-
-.exit-button:hover {
-    background-color: #fff;
-    color: #000;
-}
 
 .questions-container {
     width: 100%;
@@ -98,7 +82,7 @@ h1 {
 
 .button {
     background-color: #4863f7;
-    color: #fff;
+    color: #fffdfd;
     font-size: 16px;
     font-weight: bold;
     border: 0;
@@ -127,3 +111,30 @@ h1 {
 .answer:disabled {
     cursor: not-allowed;
 }
+
+.exit-button {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    border: none;
+    font-size: 17px;
+    color: #fff;
+    border-radius: 7px;
+    letter-spacing: 4px;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s;
+    transition-property: box-shadow;
+    background: rgb(0,140,255);
+    box-shadow: 0 0 25px rgb(0,140,255);
+    text-decoration: none;
+    font-family: sans-serif;
+  }
+  .exit-button:hover {
+    box-shadow: 0 0 5px rgb(0,140,255),
+                0 0 25px rgb(0,140,255),
+                0 0 50px rgb(0,140,255),
+                0 0 100px rgb(0,140,255);
+  }
